--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     ],
     "require": {
-        "php": "^8.0.2",
+        "php": "^8.0.2"
     },
     "extra": {
         "laravel": {
